--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,22 @@
   color: #61dafb;
 }
 
+.App-body {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.App-body-part {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.App-divider {
+  margin-bottom: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
