--- a/frontend/src/components/main_page/MainPage.css
+++ b/frontend/src/components/main_page/MainPage.css
@@ -30,6 +30,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 500%;
+  color: white;
+
 }
 
 .container {
@@ -40,7 +44,7 @@
   width: 100%;
 }
 
-.HomeTxt{
+.HomeText{
   font-family: 'Segoe UI';
   font-size: 60%;
 }
@@ -55,6 +59,20 @@
   width: 90%;
   height: 90%;
 }
+
+.SliderButton{
+  position: absolute;
+  top: 50%;
+  background-color: #d9d9d9;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 
 @keyframes App-logo-spin {
   from {
